current:
  * add coarse symbol orientation information (patch #2913094)
    - thanks to Anssi for a patch!
    - add decode direction feedback to decoder
    - update C++, Python, Perl and ObjC wrappers
    - add orientation to test suites
  * fix inconsistent fourcc endian handling bugs (bug #2918994)
    - thanks to jdccdevel for a patch!
    - add fourcc conversion and parse interfaces to zbar.h
  * report QR immediately for video (no inter-frame consistency check)
  * iphone widget back compat updates, add basic test app
  * add python distutils build infrastructure
  * add Obj-C wrapper
  * first pass working iPhone "widget"

version 0.10:
  * hotfix add MinGW import lib to Windows installer
  * attempt fix for Qt4 < 4.4
  * release updates
    - fix perl Processor init without video
  * fix window closed notification during events
    - add read_one example, fix xs compiler warnings, update perl docs
  * add result query interfaces to image scanner and processor
    - move result filtering into image scanner (from user)
    - abort output blockers when window closed
  * Windows updates
    - update installer and README for distribution of dependency libraries
    - fix applications to use binary output for xml and raw modes
  * add regression tests to makefile
  * cleanup warnings from newer gcc versions
  * fix excessive i25 QZ checks
  * add regression script
    - add zbarimg xml output for every source (even empty)
    - add edge detection to svg debug overlay
  * image scanner cleanup and minor performance enhancements
  * bug hunt and stability improvements
    - fix broken processor locks
    - fix X connection polling, revert previous separate thread workaround
    - refuse to resize windows larger than screen size
    - fix window output scaling - preserve image aspect ratio, adjust overlay
    - fix window redraw
    - fix crash on Xv image creation failure (still need XImage fallback)